feat: ãbe가 ai서버의 json값을 직접 처리